# gNine

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  KEEP_LIST.md  LICENSE.txt  README.md  benchmark_all_examples_arm.sh  benchmark_all_examples_x86.sh  canvas_benchmark.sh  compare_all_arch_examples.sh  compare_arch_bench.sh  compare_arm_variants.sh  compare_images.sh  optimize_games.changelog  run_runtime_perf_x86.sh  verify_example_outputs_arm64.sh
.github/scripts/: benchmark_pr.py  playback_pr.py
.github/workflows/: ccpp.yml
docs/: language-guide.md
examples/: CMakeLists.txt  abs_edges.psm  canvas_bench_checkerboard_4k.psm  canvas_bench_color_squares_1080p.psm  canvas_bench_color_squares_4k.psm  canvas_bench_contact_sheet_2x2.psm  canvas_bench_gradient_4k.psm  canvas_bench_rgb_triptych.psm  canvas_bench_side_by_side_compare.psm  chroma_key_green.psm  chroma_key_green_extreme.psm  combined_contents.txt  combined_output.txt  detail_boost.psm  detail_boost_extreme.psm  fib_dist.psm  fib_filter.psm  fib_filter_if.psm  fib_fractals.psm  fib_fractals_if.psm  halo_edges.psm  math_bench.psm  metaballs_binary_define.psm  metaballs_binary_optimized.psm  metaballs_define.psm  metaballs_fancy_optimized.psm  metaballs_optimized.psm  midtones_notch.psm  parabola.psm  parabola_filter.psm  parabola_gradient.psm  parobal_define.psm  parobal_define2.psm  parobala2.psm  parobala2_optimized.psm  posterize_4.psm  rgb_triptych.psm  runtime_brick_breaker.psm  runtime_brick_breaker_v2.psm  runtime_corridor_shooter.psm  (+8 more)
examples/game_of_life/: CMakeLists.txt  game_of_life_optimized.psm
gnine.xcworkspace/: contents.xcworkspacedata
gnine.xcworkspace/xcuserdata/geoff.xcuserdatad/: UserInterfaceState.xcuserstate
libs/: CMakeLists.txt
regression/: example-output-hashes-arm64.sha256
src/: Image.cpp  Image.h  ImageArray.cpp  ImageArray.hpp  JitImageFunction.cpp  JitImageFunction.hpp  Parser.cpp  Parser.h  PreviewPlayback.hpp  Runtime.cpp  Runtime.hpp  RuntimeInputState.hpp  VectorProgram.cpp  VectorProgram.hpp  main.cpp
tests/: CMakeLists.txt  color_tests.cpp  preview_playback_smoke.cmake  runtime_tests.cpp  semantic_tests.cpp
